[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py3']

[tool.isort]
profile = "black"
known_third_party = ["pygame"]

[tool.poetry]
name = "pygame-project"
version = "0.1.0"
description = "Game Dev Project"
authors = ["Alessandro Amadori <alexander.amadori@gmail.com>", "Charlotte Kratz <eternally.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
